# Dual-Frontier

./: .editorconfig  .gitattributes  .gitignore  Directory.Build.props  Directory.Packages.props  DualFrontier.sln  LICENSE  README.md  icon.svg.import  project.godot
.claude/: settings.local.json
.claude/hooks/: session-start.sh
BenchmarkDotNet.Artifacts/results/: DualFrontier.Core.Benchmarks.NativeVsManagedBenchmark-report-github.md  DualFrontier.Core.Benchmarks.NativeVsManagedBenchmark-report.csv  DualFrontier.Core.Benchmarks.NativeVsManagedBenchmark-report.html
assets/scenes/: README.md  sample.dfscene
assets/shaders/: clearcolor.frag.spv  diffusion.comp.spv  sprite.frag.spv  sprite.vert.spv
docs/: ARCHITECTURE.md  ARCHITECTURE_TYPE_SYSTEM.md  CODING_STANDARDS.md  COMBO_RESOLUTION.md  COMPOSITE_REQUESTS.md  CONTRACTS.md  CPP_KERNEL_BRANCH_REPORT.md  DEVELOPMENT_HYGIENE.md  ECS.md  EVENT_BUS.md  FEEDBACK_LOOPS.md  FIELDS.md  GODOT_INTEGRATION.md  GPU_COMPUTE.md  IDEAS_RESERVOIR.md  ISOLATION.md  KERNEL_ARCHITECTURE.md  K_L3_1_AMENDMENT_PLAN.md  M3_CLOSURE_REVIEW.md  M4_CLOSURE_REVIEW.md  M6_CLOSURE_REVIEW.md  MAXIMUM_ENGINEERING_REFACTOR_TRACK_B_ACTIVATION.md  METHODOLOGY.md  MIGRATION_PROGRESS.md  MODDING.md  MOD_OS_ARCHITECTURE.md  MOD_PIPELINE.md  NATIVE_CORE.md  NATIVE_CORE_EXPERIMENT.md  NORMALIZATION_REPORT.md  OWNERSHIP_TRANSITION.md  PASS_2_NOTES.md  PASS_3_NOTES.md  PERFORMANCE.md  PERFORMANCE_REPORT_K3.md  PERFORMANCE_REPORT_K7.md  PIPELINE_METRICS.md  README.md  RESOURCE_MODELS.md  ROADMAP.md  (+8 more)
docs/architecture/: ANALYZER_RULES.md  ARCHITECTURE.md  ARCHITECTURE_TYPE_SYSTEM.md  A_PRIME_0_7_AMENDMENT_PLAN.md  A_PRIME_9_0_AMENDMENTS_LOG.md  A_PRIME_9_RECONNAISSANCE_REPORT.md  COMBO_RESOLUTION.md  COMPOSITE_NAMESPACE_DELIBERATION_STATE.md  COMPOSITE_REQUESTS.md  CONCURRENCY_AND_MEMORY_MODEL.md  CONTRACTS.md  ECS.md  ENGINE_LIFECYCLE_AND_TRANSACTIONS.md  EVENT_BUS.md  EXECUTION_AUTHORITY_MATRIX.md  FEEDBACK_LOOPS.md  FHE_INTEGRATION_CONTRACT.md  FIELDS.md  GAME_DISTRIBUTION_AND_VANILLA_BOUNDARY.md  GODOT_INTEGRATION.md  GPU_COMPUTE.md  IDENTITY_AND_ABI_CONTRACT.md  ISOLATION.md  KERNEL_ARCHITECTURE.md  KERNEL_FULL_NATIVE_SCHEDULER.md  K_CLOSURE_REPORT.md  K_EXTENSIONS_LEDGER.md  K_L14_EVIDENCE_DASHBOARD.md  K_L3_1_AMENDMENT_PLAN.md  MAXIMUM_ENGINEERING_REFACTOR_TRACK_B_ACTIVATION.md  MIGRATION_PLAN_KERNEL_TO_VANILLA.md  MODDING.md  MOD_OS_ARCHITECTURE.md  MOD_PIPELINE.md  OWNERSHIP_TRANSITION.md  PERFORMANCE.md  PERSISTENCE_SNAPSHOT_CONTRACT.md  PHASE_A_PRIME_SEQUENCING.md  RESOURCE_MODELS.md  RESOURCE_OWNERSHIP_AND_LIFETIME.md  (+7 more)
docs/audit/: AUDIT_CAMPAIGN_PLAN.md  AUDIT_PASS_1_INVENTORY.md  AUDIT_PASS_1_PROMPT.md  (+22 more)
mods/: Directory.Build.targets  README.md
native/DualFrontier.Core.Native/: CMakeLists.txt  MODULE.md  NativeArtifactCopy.props  build.md
native/DualFrontier.Core.Native/include/: MODULE.md  background_queue.h  bootstrap_graph.h  bus_native.h  component_store.h  composite.h  compute_dispatch.h  compute_pipeline.h  df_capi.h  entity_id.h  event_type_registry.h  keyed_map.h  managed_callback.h  mod_unload.h  phase_barrier.h  phase_compute.h  pipeline_slot.h  scheduler_intrinsics.h  scheduler_trace.h  scheduling_policies.h  set_primitive.h  shm_region.h  singleton_guard.h  sparse_set.h  state_change_filter.h  string_pool.h  system_graph.h  thread_pool.h  tile_field.h  wake_registry.h  world.h
native/DualFrontier.Core.Native/src/: MODULE.md  background_queue.cpp  bootstrap_graph.cpp  bus_background.cpp  bus_common.cpp  bus_fast.cpp  bus_native.cpp  bus_native_internal.h  bus_normal.cpp  capi.cpp  component_store.cpp  composite.cpp  compute_dispatch.cpp  compute_pipeline.cpp  event_type_registry.cpp  keyed_map.cpp  managed_callback.cpp  mod_unload.cpp  phase_compute.cpp  pipeline_slot.cpp  scheduler_intrinsics.cpp  scheduler_trace.cpp  scheduling_policies.cpp  set_primitive.cpp  shm_region.cpp  state_change_filter.cpp  string_pool.cpp  system_graph.cpp  thread_pool.cpp  tile_field.cpp  wake_registry.cpp  world.cpp
native/DualFrontier.Core.Native/test/: MODULE.md  selftest.cpp
scripts/: setup-linux-sandbox.sh
src/: Directory.Build.props
tests/: README.md
tools/: build-all.ps1  build-all.sh  scaffold-kernel-integration.ps1  scaffold-runtime.ps1
(+1416 files in other folders)
